Update TokenList to better comply with requirements